mp3/compiler_errors.txt
compilation of version 3 failed with:
mkdir -p obj
g++ -std=c++1z -g -Wall -Wextra -Wno-sign-compare  -c -o obj/linkstate.o src/linkstate.cpp
src/linkstate.cpp: In function ‘void output_table()’:
src/linkstate.cpp:64:36: error: ‘INT_MAX’ was not declared in this scope
       if (f_tables[i][j].second == INT_MAX) {
                                    ^
src/linkstate.cpp: In function ‘void dijkstra()’:
src/linkstate.cpp:91:23: error: ‘INT_MAX’ was not declared in this scope
        distances[v] = INT_MAX;
                       ^
src/linkstate.cpp:100:22: error: ‘INT_MAX’ was not declared in this scope
       int min_dist = INT_MAX;
                      ^
src/linkstate.cpp: In function ‘void output_message(int, int, char*)’:
src/linkstate.cpp:162:35: error: ‘INT_MAX’ was not declared in this scope
  if (f_tables[src][dst].second == INT_MAX) {
                                   ^
src/linkstate.cpp: In function ‘void send_message(char*)’:
src/linkstate.cpp:194:60: warning: no closing ‘]’ for ‘%[’ format [-Wformat=]
    sscanf(line.c_str(), "%d %d %[^\0]", &src, &dst, message);
                                                            ^
src/linkstate.cpp:194:60: warning: embedded ‘\0’ in format [-Wformat-contains-nul]
Makefile:71: recipe for target 'obj/linkstate.o' failed
make: *** [obj/linkstate.o] Error 1
 

